sample/dump-request-admission-webhook/openshift-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    openshift.io/run-level: "0"
  name: openshift-dump-request-admission
