sample/dump-request-admission-webhook/openshift-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: serving-cert
  name: dump-request-admission
  namespace: openshift-dump-request-admission
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app: dump-request-admission
  sessionAffinity: None
  type: ClusterIP
